--- a/src/ui/ThumbnailMessageItemBody/index.scss
+++ b/src/ui/ThumbnailMessageItemBody/index.scss
@@ -11,7 +11,6 @@
   height: 270px;
   border-radius: 16px;
   @include mobile() {
-    width: 66vw;
     min-width: 160px;
   }
   &.reactions {
